# carddroper

./: .env.example  .gitignore  CLAUDE.md  cloudbuild.yaml  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  .test-clock-fixture.local.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 84b050bfae31_0021_billing_foundation.py  c3f9a2e1b8d4_0024_subscriptions_add_tier_name.py  ee2ded47d8da_initial_schema.py
backend/app/: config.py  database.py  dependencies.py  errors.py  logging.py  main.py
backend/app/billing/: __init__.py  exceptions.py  format.py  primitives.py  reason.py  stripe_client.py  stripe_extractors.py
backend/app/models/: __init__.py  balance_ledger.py  login_attempt.py  refresh_token.py  stripe_event.py  subscription.py  user.py
backend/app/routes/: auth.py  billing.py
backend/app/services/: auth_service.py  email_service.py  hibp.py  lockout_service.py
backend/scripts/: backfill_subscription_periods.py  smoke_auth.py  smoke_billing.py  smoke_cors.py  smoke_email.py  smoke_healthz.py  smoke_subscribe.py  smoke_verify_email.py  test_renewal.py
backend/tests/: conftest.py  test_auth_flow.py  test_billing_foundation.py  test_billing_portal.py  test_billing_subscribe.py  test_billing_tiers.py  test_billing_topup.py  test_change_email.py  test_client_ip.py  test_exception_handler.py  test_jwt_claims.py  test_settings_validator.py
backend/tests/services/: test_auth_service.py  test_billing_format.py  test_email_service.py
doc/: PLAN.md  README.md
(+137 files in other folders)
