[project]
name = "carddroper-backend"
version = "0.1.0"
description = "Carddroper backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.1",
    "pydantic[email]==2.10.0",
    "pydantic-settings==2.7.0",
    "python-jose[cryptography]==3.3.0",
    "bcrypt==4.0.1",
    "python-dotenv==1.0.1",
    "stripe==11.4.1",
    "httpx==0.28.1",
    "python-multipart==0.0.20",
    "slowapi==0.1.9",
    "sendgrid==6.11.0",
    "tenacity>=8.2",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
    "ruff==0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
